Estrutura base inicial do projeto